fix logos on dark mode and mobile

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -4312,6 +4312,9 @@ body.dark-mode #cta-403.cs-image-only{
     .cs-text{
       color: #ffffff !important;
     }
+    .blaze-slide img{
+      filter: grayscale(1) contrast(0) brightness(10);
+  }
   }
 
   #logo-carousel{
@@ -4374,6 +4377,8 @@ body.dark-mode #cta-403.cs-image-only{
       .blaze-slide {
         max-width:100%;
         flex: 0 0 100%;
+        display:flex;
+        justify-content:center
       }
   }
 }        
